name:                push-notify
version:             0.2.0.0
synopsis:            A server-side library for sending push notifications.
description:         This library offers a simple abstraction for sending notifications through APNS, GCM and MPNS.
                     .
                     For more information and test examples: <http://gsoc2013cwithmobiledevices.blogspot.com.ar/>
                     .
                     GitHub repository: <https://github.com/MarcosPividori/GSoC-Communicating-with-mobile-devices>
homepage:            http://gsoc2013cwithmobiledevices.blogspot.com.ar/
license:             MIT
license-file:        LICENSE
author:              Marcos Pividori, mentored by Michael Snoyman.
maintainer:          Marcos Pividori <marcos.pividori@gmail.com>

category:            Network, Cloud, Mobile
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:   Network.PushNotify.Apns
                     Network.PushNotify.Gcm

  other-modules:     Network.PushNotify.Apns.Constants
                   , Network.PushNotify.Apns.Send
                   , Network.PushNotify.Apns.Types
                   , Network.PushNotify.Gcm.Constants
                   , Network.PushNotify.Gcm.Send
                   , Network.PushNotify.Gcm.Types

  build-depends:     base >=4.7 && < 5
                   , aeson
                   , async
                   , attoparsec-conduit
                   , base16-bytestring
                   , bytestring
                   , cereal
                   , conduit
                   , conduit-extra
                   , connection
                   , containers
                   , convertible
                   , cprng-aes
                   , data-default
                   , http-client
                   , http-conduit
                   , http-types
                   , monad-control
                   , mtl
                   , network
                   , resourcet
                   , retry
                   , stm
                   , text
                   , time
                   , tls
                   , transformers
                   , unordered-containers
                   , xml-conduit
  default-language:    Haskell2010
  
source-repository head
  type:     git
  location: https://github.com/MarcosPividori/GSoC-Communicating-with-mobile-devices.git
